[package]
name = "cortex-flow"
version = "0.1.0"
edition = "2021"
author = "Lorenzo B. <illorenzobianchi@proton.me>"

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version="1.0", features = ["derive"] }
meilisearch-sdk = "0.24.3"
